// Database Schema for AI-Powered Agriculture Platform
// DBML (Database Markup Language) Specification

Project agriculture_platform {
  database_type: 'PostgreSQL'
  Note: 'AI-powered Agriculture & Rural Development Platform Database Schema'
}

// Users table - stores farmer and admin accounts
Table users {
  id uuid [pk, default: `gen_random_uuid()`]
  email varchar(255) [unique, not null]
  password_hash varchar(255) [not null]
  role varchar(20) [not null, default: 'farmer', note: 'farmer or admin']
  full_name varchar(255)
  phone_number varchar(20)
  language_preference varchar(10) [default: 'en', note: 'en, hi, ta, te, kn, bn']
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    email [unique]
    role
    created_at
  }
  
  Note: 'User accounts for farmers and administrators'
}

// Fields table - stores information about agricultural fields
Table fields {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > users.id, not null]
  name varchar(255) [not null]
  latitude decimal(10, 8) [not null]
  longitude decimal(11, 8) [not null]
  area_hectares decimal(10, 2) [not null]
  soil_type varchar(50) [note: 'clay, loam, sandy, silt, etc.']
  crop_type varchar(100) [not null]
  sowing_date date [not null]
  expected_harvest_date date
  irrigation_type varchar(50) [note: 'drip, sprinkler, flood, rainfed']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    user_id
    crop_type
    sowing_date
    (latitude, longitude)
  }
  
  Note: 'Agricultural fields owned by farmers'
}

// Crop records table - historical data of crops grown
Table crop_records {
  id uuid [pk, default: `gen_random_uuid()`]
  field_id uuid [ref: > fields.id, not null]
  crop_type varchar(100) [not null]
  variety varchar(100)
  sowing_date date [not null]
  harvest_date date
  yield_kg decimal(10, 2)
  quality_grade varchar(20)
  notes text
  created_at timestamp [default: `now()`]
  
  indexes {
    field_id
    crop_type
    sowing_date
    harvest_date
  }
  
  Note: 'Historical records of crops grown in fields'
}

// Image inferences table - stores disease detection results
Table image_inferences {
  id uuid [pk, default: `gen_random_uuid()`]
  field_id uuid [ref: > fields.id, not null]
  user_id uuid [ref: > users.id, not null]
  image_url varchar(500) [not null]
  image_s3_key varchar(500) [not null]
  predictions jsonb [not null, note: 'Array of {disease, confidence, severity}']
  top_disease varchar(100)
  top_confidence decimal(5, 2)
  inference_type varchar(20) [not null, note: 'on_device or server']
  inference_duration_ms integer
  model_version varchar(50)
  is_feedback_provided boolean [default: false]
  feedback_correct boolean
  created_at timestamp [default: `now()`]
  
  indexes {
    field_id
    user_id
    top_disease
    top_confidence
    created_at
    inference_type
  }
  
  Note: 'ML inference results for crop disease detection'
}

// Recommendations table - treatment advice for detected diseases
Table recommendations {
  id uuid [pk, default: `gen_random_uuid()`]
  inference_id uuid [ref: > image_inferences.id, not null]
  treatment_type varchar(50) [not null, note: 'chemical, organic, cultural, biological']
  title varchar(255) [not null]
  description text [not null]
  products jsonb [note: 'Array of recommended products with names and dosages']
  priority integer [not null, default: 1, note: '1=high, 2=medium, 3=low']
  estimated_cost_range varchar(50)
  application_method text
  precautions text
  created_at timestamp [default: `now()`]
  
  indexes {
    inference_id
    treatment_type
    priority
  }
  
  Note: 'Treatment recommendations for detected diseases'
}

// Chat history table - stores chatbot conversations
Table chat_history {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > users.id, not null]
  field_id uuid [ref: > fields.id, null]
  query text [not null]
  response text [not null]
  language varchar(10) [not null, default: 'en']
  confidence decimal(5, 2)
  sources jsonb [note: 'Array of knowledge base sources used']
  feedback_rating integer [note: '1-5 star rating']
  created_at timestamp [default: `now()`]
  
  indexes {
    user_id
    field_id
    language
    created_at
  }
  
  Note: 'Chatbot conversation history'
}

// Weather alerts table - stores extreme weather notifications
Table weather_alerts {
  id uuid [pk, default: `gen_random_uuid()`]
  field_id uuid [ref: > fields.id, not null]
  user_id uuid [ref: > users.id, not null]
  alert_type varchar(50) [not null, note: 'heavy_rain, frost, heat_wave, hail, storm']
  severity varchar(20) [not null, note: 'low, medium, high, critical']
  title varchar(255) [not null]
  description text [not null]
  recommended_actions jsonb [note: 'Array of action items']
  start_time timestamp [not null]
  end_time timestamp
  is_read boolean [default: false]
  is_notified boolean [default: false]
  created_at timestamp [default: `now()`]
  
  indexes {
    field_id
    user_id
    alert_type
    severity
    start_time
    is_read
  }
  
  Note: 'Weather alerts for fields'
}

// Irrigation schedules table - stores irrigation recommendations
Table irrigation_schedules {
  id uuid [pk, default: `gen_random_uuid()`]
  field_id uuid [ref: > fields.id, not null]
  user_id uuid [ref: > users.id, not null]
  recommended_date timestamp [not null]
  water_volume_liters decimal(10, 2) [not null]
  soil_moisture_level decimal(5, 2) [note: 'Percentage']
  weather_forecast jsonb [note: 'Weather data used for calculation']
  reasoning text
  is_completed boolean [default: false]
  completed_at timestamp
  actual_water_used_liters decimal(10, 2)
  created_at timestamp [default: `now()`]
  
  indexes {
    field_id
    user_id
    recommended_date
    is_completed
  }
  
  Note: 'Irrigation schedule and recommendations'
}

// Device tokens table - for push notifications
Table device_tokens {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > users.id, not null]
  token varchar(500) [not null, unique]
  device_type varchar(20) [not null, note: 'ios, android, web']
  device_info jsonb
  is_active boolean [default: true]
  last_used_at timestamp [default: `now()`]
  created_at timestamp [default: `now()`]
  
  indexes {
    user_id
    token [unique]
    is_active
  }
  
  Note: 'Device tokens for push notifications'
}

// System logs table - for audit and monitoring
Table system_logs {
  id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [ref: > users.id, null]
  action varchar(100) [not null]
  resource_type varchar(50)
  resource_id uuid
  request_method varchar(10)
  request_path varchar(500)
  status_code integer
  duration_ms integer
  ip_address varchar(45)
  user_agent text
  error_message text
  metadata jsonb
  created_at timestamp [default: `now()`]
  
  indexes {
    user_id
    action
    resource_type
    status_code
    created_at
  }
  
  Note: 'System activity logs for monitoring and audit'
}

// Model performance metrics table - tracks ML model accuracy
Table model_metrics {
  id uuid [pk, default: `gen_random_uuid()`]
  model_version varchar(50) [not null]
  metric_type varchar(50) [not null, note: 'accuracy, precision, recall, f1_score']
  metric_value decimal(5, 4) [not null]
  disease_class varchar(100)
  evaluation_date date [not null]
  sample_size integer
  notes text
  created_at timestamp [default: `now()`]
  
  indexes {
    model_version
    metric_type
    evaluation_date
  }
  
  Note: 'ML model performance tracking'
}
